Document PPDG/src/objects/Budget_planner__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Expense_1_Amount__c</fullName>
        <label>Additional Expense 1 Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Expense_1_Description__c</fullName>
        <label>Additional Expense 1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Expense_2_Amount__c</fullName>
        <label>Additional Expense 2 Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Expense_2_Description__c</fullName>
        <label>Additional Expense 2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Expense_3_Amount__c</fullName>
        <label>Additional Expense 3 Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Expense_3_Description__c</fullName>
        <label>Additional Expense 3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Pension_commitments__c</fullName>
        <label>Additional Pension commitments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>After_school_instruction__c</fullName>
        <label>After school instruction</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_HPP_payment__c</fullName>
        <label>Anticipated HPP payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Birthdays_Celebrations_Presents__c</fullName>
        <label>Birthdays/Celebrations/Presents</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Planner_Result__c</fullName>
        <formula>&quot;Surplus&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Planner Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buildings_insurance__c</fullName>
        <label>Buildings insurance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Petrol_Insurance_and_Servicing__c</fullName>
        <label>Car - Petrol/Insurance and Servicing</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_breakdown__c</fullName>
        <label>Car breakdown</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_insurance__c</fullName>
        <label>Car insurance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_servicing__c</fullName>
        <label>Car servicing</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_tax__c</fullName>
        <label>Car tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charitable_donations__c</fullName>
        <label>Charitable donations</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Clothing__c</fullName>
        <label>Clothing</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contents_Insua__c</fullName>
        <label>Contents insurance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Council_tax__c</fullName>
        <label>Council tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_card_payments__c</fullName>
        <label>Credit card payments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disposable_income__c</fullName>
        <formula>Take_home_pay__c - Total_Commitments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disposable income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electricity__c</fullName>
        <label>Electricity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Credit_Store_card_payments__c</fullName>
        <label>Existing Credit/Store card payments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Life_PP_or_Critical_Illness__c</fullName>
        <inlineHelpText>Existing Life/Personal Protection or Critical illness payments</inlineHelpText>
        <label>Existing Life, PP or Critical Illness</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_monthly_Loan_HP_payments__c</fullName>
        <label>Existing monthly Loan/HP payments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_mortgage_payment_to_continue__c</fullName>
        <label>Existing mortgage payment to continue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Food_c__c</fullName>
        <label>Food</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gaming_Entertainment__c</fullName>
        <label>Gaming/Entertainment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas__c</fullName>
        <label>Gas</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Going_out__c</fullName>
        <label>Going out</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gym_Health_clubs__c</fullName>
        <label>Gym/Health clubs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Health_insurance__c</fullName>
        <label>Health insurance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holidays__c</fullName>
        <label>Holidays</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_insurance__c</fullName>
        <label>Home insurance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_phone__c</fullName>
        <label>Home phone</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Household_eg_Food_cleaning_clothing__c</fullName>
        <label>Household eg, Food, cleaning, clothing</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet__c</fullName>
        <label>Internet</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Life__c</fullName>
        <label>Life Insurance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_payments__c</fullName>
        <label>Loan payments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Budget planners</relationshipLabel>
        <relationshipName>Budget_planners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Commitments__c</fullName>
        <label>Other Commitments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_expenses__c</fullName>
        <label>Other expenses</label>
        <summarizedField>Additional_commitments__c.Amount__c</summarizedField>
        <summaryForeignKey>Additional_commitments__c.Budget_planner__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budget planners</relationshipLabel>
        <relationshipName>Budget_planners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pet_expenses__c</fullName>
        <label>Pet expenses</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regular_investments_ISA_s__c</fullName>
        <label>Regular investments/ISA&apos;s</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_fee__c</fullName>
        <label>School fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sky_Cable__c</fullName>
        <label>Sky/Cable</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sporting_tickets__c</fullName>
        <label>Sporting tickets</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriptions__c</fullName>
        <label>Subscriptions</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TV_License__c</fullName>
        <label>TV License</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Take_home_pay__c</fullName>
        <label>Take home pay</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Commitments__c</fullName>
        <formula>Water__c + Gas__c + Mobile__c + Car_Petrol_Insurance_and_Servicing__c + Car_tax__c + Car_insurance__c + Car_breakdown__c + Life__c + Travel_insurance__c + Health_insurance__c + Home_phone__c + Gaming_Entertainment__c + Clothing__c + Holidays__c + Going_out__c + Existing_Life_PP_or_Critical_Illness__c + Electricity__c + TV_License__c + Travel_expenses__c + Sky_Cable__c + Contents_Insua__c + Regular_investments_ISA_s__c + Car_servicing__c + Internet__c + Gym_Health_clubs__c + Food_c__c + Birthdays_Celebrations_Presents__c + School_fee__c + After_school_instruction__c + Charitable_donations__c + Pet_expenses__c + Subscriptions__c + Sporting_tickets__c + Other_Commitments__c+Council_tax__c+ Anticipated_HPP_payment__c + Credit_card_payments__c +Loan_payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Commitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_expenses__c</fullName>
        <label>Travel expenses</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_insurance__c</fullName>
        <label>Travel insurance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Underwriter_Electricity__c</fullName>
        <label>Underwriter Electricity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Underwriter_Gas__c</fullName>
        <label>Underwriter Gas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Water__c</fullName>
        <label>Water</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Budget planner</label>
    <nameField>
        <displayFormat>BPN{0000}</displayFormat>
        <label>Budget planner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget planners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>